# hdb-lens

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
app/assets/fonts/: OFL.txt
models/: adaptive_coverage.csv  metadata.json  metrics.json  q_hat.npy  recent_sales.csv  town_errors.csv  town_trends.csv
reports/: model_card.md
scripts/: run_pipeline.py
src/hdblens/: config.py  conformal.py  evaluate.py  features.py  ingest.py  predict.py  train.py
tests/: test_app.py  test_conformal.py  test_features.py  test_models.py  test_predict.py
