[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hdblens"
version = "1.0.0"
description = "Production-grade price intelligence for Singapore HDB resale flats: live data pipeline, gradient-boosted quantile models, calibrated price ranges, SHAP explainability."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Devansu Agarwal" }]
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "shap>=0.44",
    "requests>=2.31",
    "joblib>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
app = ["streamlit>=1.30"]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
